syntax = "proto3";
option csharp_namespace = "ItemsService";
package items;

service ItemService {
    rpc GetAll (Empty) returns (ItemsList) {}
    rpc Get (ItemId) returns (Item) {}
    rpc Insert (Item) returns (Item) {}
    rpc Update (Item) returns (Item) {}
    rpc Delete (ItemId) returns (Empty) {}
}

message Empty {}

message Item {
    int32 ItemId = 1;
    string name = 2;
    int32 seats = 3;
    string brand = 4;
    string type = 5;
    float value = 6;
}

message ItemsList {
    repeated Item items = 1;
}

message ItemId {
    int32 id = 1;
}